<resources>
    <string name="com.crashlytics.android.build_id">bf4ed578-c7e5-46b6-b219-2b339d1b3744</string>
    <string name="app_name">翁PC</string>
    <string name="exit_the_application_title" />
    <string name="exit_the_application_message">确定要退出美丽说吗？</string>
    <string name="exit_the_application_yes">是的</string>
    <string name="exit_the_application_no">取消</string>
    <string name="logout_the_application_title" />
    <string name="logout_the_application_message">确定要退出美丽说吗？</string>
    <string name="network_error_hint">网络不给力，麻烦检查一下</string>
    <string name="network_error">网络异常</string>
    <string name="loadnetdata">数据加载中...</string>
    <string name="nocontent_promot">抱歉没有您要找的内容</string>
    <string name="dialog_human_text">不好意思，美丽说是女生的时尚聚集地，快邀请你的女性朋友来美丽说玩吧。</string>
    <string name="dialog_welcome_text">"美丽说，记录我漂亮的每一天。
在这里跟朋友一起分享搭配心得，挑衣服，聊化妆，让改变发生！

现在注册，开始你的美丽修炼!"</string>
    <string name="cameraview_takepicture">拍摄图片</string>
    <string name="cameraview_takefromgallary">从图库中选择</string>
    <string name="login_male_prompt">美女集中营，牛郎不能进入噢</string>
    <string name="finish">完成</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="refresh">刷新</string>
    <string name="login_info">登录或注册后，根据兴趣爱好，订制喜欢内容。</string>
    <string name="newshare_title">新分享</string>
    <string name="reply_title">发表评论</string>
    <string name="forward_title">转发</string>
    <string name="message_at_button">\@我的</string>
    <string name="actiontitle">请选择需要的操作</string>
    <string name="already_first_page">已经是第一页了亲</string>
    <string name="already_last_page">已经是最后一页了亲</string>
    <string name="please_wait">请稍候...</string>
    <string name="me_all">所有</string>
    <string name="me_picture">图片</string>
    <string name="me_like">喜欢</string>
    <string name="addlike">添加喜欢中...</string>
    <string name="deletelike">删除喜欢中...</string>
    <string name="waitfor">加载中...</string>
    <string name="dosuccess">操作成功</string>
    <string name="invalid_username_password">用户名或密码错误</string>
    <string name="serverbusy">服务器忙</string>
    <string name="registerfail">注册不成功</string>
    <string name="editsuccess">信息修改成功</string>
    <string name="editfail">信息修改失败</string>
    <string name="user_editing">信息修改中...</string>
    <string name="user_registering">注册中请稍候...</string>
    <string name="user_nickname_empty">用户昵称不能为空</string>
    <string name="register_eamildisable">这个邮箱已经注册过美丽说了，请输入其它邮箱</string>
    <string name="register_nicknamedisable">哎呀，这个昵称太受欢迎了，已经有爱美丽使用了，起个新的美丽昵称吧！</string>
    <string name="sendmessagesuccess">发送成功</string>
    <string name="sharesuccess">分享成功</string>
    <string name="connnetmodeltitle">2G/3G/WIFI网络环境切换</string>
    <string name="syncstatetitle">同步状态设置</string>
    <string name="searchbaobei">搜宝贝</string>
    <string name="unbindsinatitle">确定不再将分享同步到新浪微博吗？</string>
    <string name="unbindsinamessage">(下次启动需要重新配置账户)</string>
    <string name="unbindqqtitle">确定不再将分享同步到QQ空间吗？</string>
    <string name="unbindqqmessage">(下次启动需要重新配置账户)</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">加载中...</string>
    <string name="pull_to_refresh_last_update">最近刷新:</string>
    <string name="collectbaobei">收集整理你喜欢的宝贝</string>
    <string name="likepromt">点击小红心收集并鼓励分享的MM</string>
    <string name="hello">下拉可刷新</string>
    <string name="refresh_down_text">下拉可刷新</string>
    <string name="refresh_release_text">松开可刷新</string>
    <string name="toast_text">ScrollView下拉刷新完毕</string>
    <string name="choosegroupmagatitle">兴趣选择</string>
    <string name="recommendgroupmagatitle">推荐关注</string>
    <string name="pleasechooseone">选择一个你喜欢的分类</string>
    <string name="categorytitle">已为你关注了以下你可能感兴趣的内容</string>
    <string name="exchange_size">大小</string>
    <string name="exchange_action_open">打开</string>
    <string name="exchange_action_browse">浏览</string>
    <string name="exchange_action_download">下载</string>
    <string name="exchange_network_break_alert">请确定设备成功联接网络</string>
    <string name="exchange_back_to_top">回到顶部</string>
    <string name="exchange_more">正在加载更多推荐</string>
    <string name="exchange_dowloadOrNot">是否下载推荐应用？</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMUpdateTitle">应用程序有新版本更新</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMUpdatingNow">正在更新应用程序...</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="wx_text_load">立即登录</string>
    <string name="wx_text_search">搜索想分享的宝贝</string>
    <string name="wx_text_collect">登录美丽说分享你的收藏</string>
    <string name="wx_text_share">登录美丽说分享你分享过的</string>
    <string name="wx_text_rookie">你最近没有逛过美丽说</string>
    <string name="wx_shousuo_hint_all">搜索宝贝、用户</string>
    <string name="wx_shousuo_hint_baobei">搜索宝贝</string>
    <string name="about_meilishuo">苹果官方推荐女生必备,荣获 2011年度最佳应用大奖。姐妹淘边淘边聊更尽兴！ 时尚专家,购物达人团每日精选推荐最漂亮,最值得购买的衣服饰物,全面解决你穿衣搭配的烦恼。 修炼穿衣之道, 从美丽说开始。</string>
    <string name="thanks">我们会在第一时间帮你解决 /n有你在我们身边，我们将做的更好 /n谢谢你的支持:)</string>
    <string name="change_bg_pic">更换背景图片</string>
    <string name="tab_subject_title">专题</string>
    <string name="meilishuo_audrey">美丽说时尚酵母</string>
    <string name="no_tiezi_text">暂未发布帖子</string>
    <string name="creditcard_pay">信用卡支付</string>
    <string name="depositcard_pay">储蓄卡支付</string>
    <string name="muyoule">木有了</string>
    <string name="msg_send_fail">发送失败</string>
    <string name="community">爱美丽Club</string>
    <string name="zhiding">置顶</string>
    <string name="tiezi">帖子</string>
    <string name="text_foot">查看更多评论...</string>
    <string name="text_foot_loading">加载中...</string>
    <string name="text_is_busy">正在请求网络，请稍候...</string>
    <string name="text_is_bottom">没有更多数据</string>
    <string name="btn_article_comment">评论</string>
    <string name="btn_article_like">喜欢</string>
    <string name="btn_article_del">删除</string>
    <string name="text_like_success">喜欢成功</string>
    <string name="text_unlike_success">删除喜欢成功</string>
    <string name="text_like_fail">喜欢失败</string>
    <string name="text_unlike_fail">删除喜欢失败</string>
    <string name="text_has_no_data">暂无评论</string>
    <string name="text_can_not_reply">爱美丽Club火热内测中，回复功能暂未全部开放。先去逛逛吧！</string>
    <string name="text_can_not_like">抱歉，您无喜欢的权限。</string>
    <string name="title_confirm_del_article">确认删除帖子?</string>
    <string name="title_confirm_del_reply">确认删除回复?</string>
    <string name="text_newmessage_title">发帖</string>
    <string name="hint_newmessage_title">标题</string>
    <string name="hint_newmessage_content">说点什么...</string>
    <string name="text_category">选择帖子分类:</string>
    <string name="text_category_choose">亲，请选择帖子所属分类</string>
    <string name="text_postmessage_upload">帖子发布中...</string>
    <string name="text_title_empty">帖子标题不能为空</string>
    <string name="text_upload_pic_fail">图片上传失败</string>
    <string name="text_post_message_success">成功发帖</string>
    <string name="text_post_message_fail">发帖失败</string>
    <string name="text_comment_title">写评论</string>
    <string name="text_comment_upload">评论发表中...</string>
    <string name="hint_comment_content">添加评论...</string>
    <string name="text_comment_remainder">还可以输入%1$d个字</string>
    <string name="text_comment_empty">请输入评论内容</string>
    <string name="text_comment_success">发表评论成功</string>
    <string name="text_comment_fail">发表评论失败</string>
    <string name="text_can_not_post">爱美丽Club火热内测中，发帖功能暂未全部开放。先去逛逛吧！</string>
    <string name="tab_search">受</string>
    <string name="tab_love_beauty">送</string>
    <string name="tab_fashion">漏</string>
    <string name="tab_shopping_cart">睡</string>
    <string name="tab_me_not_login">我</string>
    <string name="tab_me_login">我</string>
    <string name="main_bottom_order">订单</string>
    <string name="main_bottom_community">社区</string>
    <string name="main_toast_wifi_scan">wifi连接,高品质图浏览模式</string>
    <string name="main_toast_2g_scan">移动连接,节省流量浏览模式</string>
    <string name="main_toast_nonet_scan">没有网络连接</string>
    <string name="text_copon_title">我的优惠劵</string>
    <string name="coupon_desc_pre">您使用了优惠券：</string>
    <string name="text_coupon_hasno">您还没有收到优惠劵哦~</string>
    <string name="category_dimensional">二维码</string>
    <string name="capture_title">二维码扫描</string>
    <string name="capture_tips">请对准想要识别的二维码</string>
    <string name="category_title">找宝贝</string>
    <string name="category_week_hot">本周热款</string>
    <string name="search_item_hint">搜索宝贝</string>
    <string name="search_magazine_hint">搜索杂志</string>
    <string name="search_user_hint">搜索用户</string>
    <string name="search_maga_notfound">该杂志不存在</string>
    <string name="search_user_notfound">该用户不存在</string>
    <string name="search_title">搜索</string>
    <string name="search_item">宝贝</string>
    <string name="search_maga">杂志</string>
    <string name="search_user">用户</string>
    <string name="shop_title">商家详情</string>
    <string name="login_hint_email">请输入常用邮箱</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_btn_get_passwd">找回密码</string>
    <string name="login_login_text">登录</string>
    <string name="login_account_text">账户</string>
    <string name="login_edit_hint">美丽说昵称/注册邮箱</string>
    <string name="login_passwd_text">密码</string>
    <string name="login_passwd_hint">美丽说密码</string>
    <string name="login_or">---------- 用以下方式互联登录 ----------</string>
    <string name="login_btn_sina">新浪微博</string>
    <string name="login_btn_tencent">QQ</string>
    <string name="login_btn_taobao">淘宝</string>
    <string name="login_btn_tencent_weibo">腾讯微博</string>
    <string name="login_btn_regist">注册美丽说账户</string>
    <string name="regist_welcome">，欢迎加入美丽说！</string>
    <string name="regist_hint_email">请输入常用邮箱</string>
    <string name="regist_hint_email_error">邮箱格式不正确，请重新输入!</string>
    <string name="regist_hint_nickname">请输入你的美丽说昵称</string>
    <string name="regist_hint_nickname_error">昵称中不能包含空格</string>
    <string name="regist_hint_passwd">请输入密码</string>
    <string name="regist_hint_passwd_error">密码长度必须为6~32位</string>
    <string name="regist_camera_choice_1">就用原来的</string>
    <string name="regist_camera_choice_2">删除头像</string>
    <string name="regist_camera_choice_3">选择头像</string>
    <string name="regist_from_camera">拍摄照片</string>
    <string name="regist_from_gallery">从相册里选择</string>
    <string name="regist_ok">知道了</string>
    <string name="regist_title">注册</string>
    <string name="regist_email">邮箱</string>
    <string name="regist_edit_hint_email">请输入你常用的邮箱地址</string>
    <string name="regist_nickname">昵称</string>
    <string name="regist_edit_hint_nickname">取一个你在美丽说的昵称</string>
    <string name="regist_passwd">密码</string>
    <string name="regist_edit_hint_passwd">输入密码</string>
    <string name="regist_gender">性别</string>
    <string name="regist_women">女</string>
    <string name="regist_man">男</string>
    <string name="regist_avatar">头像</string>
    <string name="regist_has_account">已有美丽说账户</string>
    <string name="bind_bind_fail">绑定失败</string>
    <string name="bind_hint_email">请输入常用邮箱</string>
    <string name="bind_hint_passwd">请输入密码</string>
    <string name="bind_user_logining">用户登录中请稍候...</string>
    <string name="bind_title">绑定账户</string>
    <string name="bind_hint_accound">Email 或 昵称</string>
    <string name="bind_account">账户</string>
    <string name="bind_passwd">密码</string>
    <string name="bind_has_account">已有美丽说账户，进行绑定</string>
    <string name="bind_has_no_account">没有美丽说账户，跳过</string>
    <string name="sync_unbind_success">解除绑定成功</string>
</resources>