<?xml version="1.0" encoding="utf-8"?>
<TabHost android:id="@android:id/tabhost" 
    android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
  	<FrameLayout android:background="#ffeeeeee" android:layout_width="fill_parent" 
  	    android:layout_height="fill_parent">
        <FrameLayout android:id="@android:id/tabcontent" 
            android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ScrollView android:id="@+id/view3"
                        android:layout_width="fill_parent"  
	                    android:layout_height="fill_parent"
	                    android:paddingBottom="40dip"
	                    >
                    
	               		<LinearLayout 
	                        android:layout_width="fill_parent"  
	                        android:layout_height="wrap_content"
	                        android:orientation="horizontal">
	                        
	                        <LinearLayout android:id="@+id/linearLayout1"  
		                        android:layout_width="1sp"  
		                        android:layout_height="fill_parent"
		                        android:orientation="vertical"
		                        android:layout_weight="1" >
		                        <com.example.testaml.DummyView android:layout_width="fill_parent"
		                            android:layout_height="1sp"
		                            android:visibility="visible" 
		                            android:id ="@+id/dummy1" />"
	
	                            <!--   <com.example.testaml.DummyView 
		                    	    android:id="@+id/layoutWidthViewListener"
		                    	    android:layout_width="fill_parent"
		                    	    android:layout_height="1dip" /> -->
		                    </LinearLayout>
	                        <LinearLayout android:id="@+id/linearLayout2"  
		                        android:layout_width="1sp"  
		                        android:layout_height="fill_parent"
		                        android:orientation="vertical"
		                        android:layout_weight="1" >
		                        <com.example.testaml.DummyView android:layout_width="fill_parent"
		                            android:layout_height="1sp"
		                            android:visibility="visible"
		                            android:id ="@+id/dummy2" />
		                    </LinearLayout>
							<LinearLayout android:id="@+id/linearLayout3"  
		                        android:layout_width="1sp"  
		                        android:layout_height="fill_parent"
		                        android:orientation="vertical"
		                        android:layout_weight="1">
		                        <com.example.testaml.DummyView android:layout_width="fill_parent"
		                            android:layout_height="1sp"
		                            android:visibility="visible"
		                            android:id ="@+id/dummy3" />
		                    </LinearLayout>
		                    
	                        
	                    </LinearLayout> 
	                </ScrollView>
                    
                    <ImageView android:id="@+id/view1"  
                        android:layout_width="fill_parent"  
                        android:layout_height="fill_parent"
                        android:background="@drawable/weng8"/>  
                    <ImageView android:id="@+id/view2"  
                        android:layout_width="fill_parent"  
                        android:layout_height="fill_parent"
                        android:background="@drawable/weng5"/>
                    <ImageView android:id="@+id/view4"  
                        android:layout_width="fill_parent"  
                        android:layout_height="fill_parent"
                        android:background="@drawable/weng4"/>
                    <ImageView android:id="@+id/view5"  
                        android:layout_width="fill_parent"  
                        android:layout_height="fill_parent"
                        android:background="@drawable/weng6"/>
                    
        </FrameLayout>
        <TabWidget android:id="@android:id/tabs" 
            android:visibility="gone" 
            android:layout_height="wrap_content" android:layout_width="fill_parent" />
        <LinearLayout android:gravity="center_vertical" 
            android:layout_gravity="bottom" android:orientation="horizontal" 
            android:background="@drawable/details_home_nav_bg" 
            android:paddingTop="10.0dip" android:layout_width="fill_parent" 
            android:layout_height="60.0dip">
            <TextView android:textSize="9.0sp" 
                android:textColor="@color/main_text_color" 
                android:gravity="center_horizontal" android:id="@+id/tv_love_beauty" 
                android:layout_width="0.0dip" android:layout_height="fill_parent" 
                android:layout_marginTop="4.0dip" android:text="@string/tab_love_beauty"
                android:drawableTop="@drawable/toolbar_community_normal"
                android:drawablePadding="-2.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="9.0sp" android:textColor="@color/main_text_color"
                android:gravity="center_horizontal" android:id="@+id/tv_search"
                android:layout_width="0.0dip" android:layout_height="fill_parent"
                android:layout_marginTop="4.0dip" android:text="@string/tab_search"
                android:drawableTop="@drawable/toolbar_category_normal"
                android:drawablePadding="-2.0dip" android:layout_weight="1.0" />
            <View android:layout_width="20.0dip" android:layout_height="wrap_content" />
            <TextView android:textSize="9.0sp" android:textColor="@color/main_text_color"
                android:gravity="center_horizontal" android:id="@+id/tv_fashion"
                android:layout_width="0.0dip" android:layout_height="fill_parent"
                android:text="@string/tab_fashion" android:drawableTop="@drawable/toolbar_ico_home_normal"
                android:drawablePadding="-2.0dip" android:layout_weight="1.0" />
            <View android:layout_width="20.0dip" android:layout_height="wrap_content" />
            <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <TextView android:textSize="9.0sp" android:textColor="@color/main_text_color" 
                    android:gravity="center_horizontal" android:layout_gravity="bottom" 
                    android:id="@+id/tv_shoppingcart" android:layout_width="fill_parent" 
                    android:layout_height="wrap_content" android:layout_marginBottom="7.0dip" 
                    android:text="@string/tab_shopping_cart" android:drawableTop="@drawable/toolbar_shoppingcart_normal" 
                    android:drawablePadding="-2.0dip" />
                <TextView android:textSize="8.0sp" android:textColor="#ffffffff" 
                    android:gravity="center" android:layout_gravity="top|center" 
                    android:id="@+id/shopping_cart_num" android:background="@drawable/tipball" 
                    android:layout_width="18.0dip" android:layout_height="18.0dip" 
                    android:layout_marginLeft="15.0dip" android:text="99" />
            </FrameLayout>
            <TextView android:textSize="9.0sp" android:textColor="@color/main_text_color" 
                android:gravity="center_horizontal" android:id="@+id/tv_me" 
                android:layout_width="0.0dip" android:layout_height="fill_parent" 
                android:layout_marginTop="4.0dip" android:text="@string/tab_me_login" 
                android:drawableTop="@drawable/toolbar_me_normal" android:drawablePadding="-2.0dip" 
                android:layout_weight="1.0" />
        </LinearLayout>
    </FrameLayout>
</TabHost>